--- a/scheduler-service/src/main/resources/application.properties
+++ b/scheduler-service/src/main/resources/application.properties
@@ -1,1 +1,20 @@
-spring.application.name=Scheduler Service
+spring.application.name=scheduler-service
+server.port=8082
+
+# Datasource (reuse base Postgres)
+spring.datasource.url=jdbc:postgresql://localhost:5431/chronotaskdb
+spring.datasource.username=chronouser
+spring.datasource.password=chronopass
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+# Kafka
+spring.kafka.bootstrap-servers=127.0.0.1:9092
+
+# Topics
+app.topics.task-overdue=task-overdue-topic
+
+# Logging for Kafka
+logging.level.org.springframework.kafka=DEBUG
+logging.level.org.apache.kafka=INFO
