--- a/worker-service/src/main/resources/application.properties
+++ b/worker-service/src/main/resources/application.properties
@@ -1,1 +1,32 @@
-spring.application.name=Worker Service
+spring.application.name=worker-service
+
+# DB
+spring.datasource.url=jdbc:postgresql://localhost:5431/chronotaskdb
+spring.datasource.username=chronouser
+spring.datasource.password=chronopass
+spring.jpa.hibernate.ddl-auto=none
+
+# Kafka
+spring.kafka.bootstrap-servers=127.0.0.1:9092
+spring.kafka.consumer.group-id=worker-service-v2
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.json.use.type.headers=false
+spring.kafka.consumer.properties.spring.json.value.default.type=com.chronotask.worker_service.events.TaskOverdueEvent
+
+app.topics.task-overdue=task-overdue-topic
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.enable=false
+
+# Logging for Kafka
+logging.level.org.springframework.kafka=DEBUG
+logging.level.org.apache.kafka=INFO
